# GatewarePuppet

./: CMakeLists.txt  LICENSE  README.md
project/: main.cpp
project/Assets/: AssetColorPallete.h  AssetEye.h  AssetEyebrow.h  AssetEyelid.h  AssetIconPinwheel.h  AssetMouth.h  AssetPupil.h
project/Code/: Drawable.cpp  Drawable.h  Eye.cpp  Eye.h  Face.cpp  Face.h  MultiFrameDrawable.cpp  MultiFrameDrawable.h
project/Gateware/: Gateware.h
scripts/: LinuxSetup.sh  Win32Setup.bat
